--- a/phase_One/puppyProject/Projects/CSS/style2.css
+++ b/phase_One/puppyProject/Projects/CSS/style2.css
@@ -50,15 +50,11 @@ header h1 {
 }
 
 .main__featured {
-  position: relative;
-  /* display: grid;
-  grid-template-columns: repeat(3, 1fr); */
-  background-color: var(--second-bg-color);
+  background-color: white;
   display: flex;
   text-align: center;
-  font-size: 3rem;
+  justify-content: space-evenly;
   column-gap: 1.2rem;
-  /* justify-content: space-between; */
 }
 
 .center {
@@ -66,10 +62,9 @@ header h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* width: 100%;
-  height: 100%; */
 }
 .center p {
+  font-size: 3rem;
   width: 100%;
   padding: 0 1.2rem;
   height: 100%;
@@ -128,7 +123,6 @@ footer p span {
     display: flex;
     flex-direction: column;
     row-gap: 2rem;
-    /* grid-template-columns: repeat(auto-fill, minmax(174px, 1fr)); */
   }
 
   .center {
