--- a/phase_One/old apple/old apple/CSS/style.css
+++ b/phase_One/old apple/old apple/CSS/style.css
@@ -1,12 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300&display=swap");
+
 :root {
   --bg-dark: black;
-  --bg-light-grey: rgb(231, 231, 231);
+  --bg-light-grey: #fafafa;
   --color-white: white;
-  --color-grey: grey;
+  --color-grey: rgb(163, 162, 162);
   --color-blue: #06c;
 }
 html {
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 62.5%;
 }
 * {
@@ -38,7 +40,7 @@ nav ul li a:link,
 nav ul li a:visited {
   text-decoration: none;
   color: var(--color-grey);
-  font-weight: 100;
+  font-weight: 400;
   padding: 0 0.5rem;
   transition: all 0.3s;
 }
@@ -64,7 +66,7 @@ nav ul li a img {
   font-size: 2rem;
 }
 .mac .mac__text p {
-  font-weight: lighter;
+  font-weight: 400;
   font-size: 1.8rem;
   color: rgb(110, 110, 110);
 }
@@ -73,7 +75,7 @@ nav ul li a img {
 }
 .mac .mac__text h2 {
   font-size: 2em;
-  font-weight: 100;
+  font-weight: 400;
 }
 /* reusable class */
 .link {
@@ -118,12 +120,12 @@ nav ul li a img {
 }
 .text h3 {
   font-size: 3rem;
-  font-weight: 100;
+  font-weight: 400;
   padding: 1rem 0;
 }
 .text p {
   font-size: 1.8rem;
-  font-weight: 100;
+  font-weight: 400;
   color: var(--color-grey);
   padding-bottom: 1rem;
 }
@@ -131,6 +133,20 @@ nav ul li a img {
   width: 100%;
   height: 71rem;
   object-fit: cover;
+}
+.flex {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.flex p {
+  cursor: pointer;
+  padding-bottom: 5rem;
+  font-size: 1.8rem;
+  color: var(--color-blue);
 }
 /* ---------------- */
 .iphone__light {
@@ -142,13 +158,16 @@ nav ul li a img {
 /* More products */
 /* Responsive Design */
 .more__products {
-  max-width: 130rem;
-  margin: 0 auto;
+  /* max-width: 130rem; */
+  margin: 2rem auto;
+  padding: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(50rem, 1fr));
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
 }
 .watch {
   background-image: url("../images/home/watch-series-5.jpg");
+  background-color: #fafafa;
 }
 .card {
   background-image: url("../images/home/apple-card.jpg");
