--- a/phase_One/old apple/old apple/CSS/style.css
+++ b/phase_One/old apple/old apple/CSS/style.css
@@ -7,15 +7,18 @@
   --color-grey: rgb(163, 162, 162);
   --color-blue: #06c;
 }
+
 html {
   font-family: "Montserrat", sans-serif;
   font-size: 62.5%;
 }
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
 /* Navigations */
 nav {
   display: flex;
@@ -27,15 +30,18 @@ nav {
   background-color: var(--bg-dark);
   height: 4.4rem;
 }
+
 nav ul {
   width: 98rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 nav ul li {
   list-style-type: none;
 }
+
 nav ul li a:link,
 nav ul li a:visited {
   text-decoration: none;
@@ -44,16 +50,23 @@ nav ul li a:visited {
   padding: 0 0.5rem;
   transition: all 0.3s;
 }
+
 nav ul li a:hover,
 nav ul li a:active {
   color: var(--color-white);
 }
+
 nav ul li a img {
   margin: auto 0;
   width: 1.8rem;
   vertical-align: middle;
-  color: var(--color-grey);
+  opacity: 0.7;
 }
+
+nav ul li a img:hover {
+  opacity: 1;
+}
+
 /* Section--Mac */
 
 .mac {
@@ -65,46 +78,55 @@ nav ul li a img {
   text-align: center;
   font-size: 2rem;
 }
+
 .mac .mac__text p {
   font-weight: 400;
   font-size: 1.8rem;
   color: rgb(110, 110, 110);
 }
+
 .mac .mac__text h1 {
   font-size: 5.6rem;
 }
+
 .mac .mac__text h2 {
   font-size: 2em;
   font-weight: 400;
 }
+
 /* reusable class */
 .link {
   font-size: 2rem;
   display: flex;
   gap: 2.5rem;
 }
+
 .link a:link,
 .link a:visited {
   color: var(--color-blue);
   text-decoration: none;
   transition: all 0.3s;
 }
+
 .link a:hover,
 .link a:active {
   color: var(--bg-dark);
 }
+
 .bg__img {
   height: 71rem;
   background-size: cover;
   background-position: center;
   width: 100%;
 }
+
 /* Iphone Section */
-.iphone {
-}
+.iphone {}
+
 .iphone__dark {
   background-image: url("../images/home/iphone11-pro-bg.jpg");
 }
+
 .info {
   display: flex;
   width: 100%;
@@ -114,29 +136,35 @@ nav ul li a img {
   color: white;
   padding-top: 5rem;
 }
+
 /* reusable class */
 .text h2 {
   font-size: 5rem;
 }
+
 .text h3 {
   font-size: 3rem;
   font-weight: 400;
   padding: 1rem 0;
 }
+
 .text p {
   font-size: 1.8rem;
   font-weight: 400;
   color: var(--color-grey);
   padding-bottom: 1rem;
 }
+
 a i {
   margin-left: 0.5rem;
 }
+
 .image img {
   width: 100%;
   height: 71rem;
   object-fit: cover;
 }
+
 .flex {
   width: 100%;
   height: 100%;
@@ -145,19 +173,23 @@ a i {
   justify-content: space-between;
   align-items: center;
 }
+
 .flex p {
   cursor: pointer;
   padding-bottom: 5rem;
   font-size: 1.8rem;
   color: var(--color-blue);
 }
+
 /* ---------------- */
 .iphone__light {
   background-image: url("../images/home/iphone11-bg.jpg");
 }
+
 .dark .text {
   color: var(--bg-dark);
 }
+
 /* More products */
 /* Responsive Design */
 .more__products {
@@ -168,71 +200,88 @@ a i {
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
 }
+
 .watch {
   background-image: url("../images/home/watch-series-5.jpg");
   background-color: #fafafa;
 }
+
 .card {
   background-image: url("../images/home/apple-card.jpg");
 }
+
 .tv {
   background-image: url("../images/home/apple-tv-background.jpg");
 }
+
 .airpods {
   background-color: black;
 }
+
 .airpods .air__img {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .macbook {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .ipad {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .ipad img {
   width: 100%;
 }
+
 footer {
   background-color: var(--bg-light-grey);
 }
+
 .foot-cont {
   max-width: 100rem;
   margin: 2rem auto;
 }
+
 footer .footer__links {
   border-top: 1px solid rgb(170, 169, 169);
   display: flex;
   padding-top: 2rem;
   justify-content: space-between;
 }
+
 footer p {
   font-size: 1.3rem;
   padding: 2rem 1rem;
   color: grey;
 }
+
 footer .footer__links ul {
   margin-top: 1rem;
 }
+
 footer .footer__links h3 {
   margin-top: 1rem;
 }
+
 footer .footer__links ul li {
   list-style: none;
   padding: 0.4rem;
 }
+
 footer .footer__links ul li a:link,
 footer .footer__links ul li a:visited {
   color: grey;
   font-size: 1.2rem;
   text-decoration: none;
 }
+
 footer .footer__links ul li a:hover,
 footer .footer__links ul li a:active {
   text-decoration: underline;
@@ -244,6 +293,7 @@ footer .footer__links ul li a:active {
   align-items: center;
   padding: 1rem 0;
 }
+
 .copyright p {
   color: rgb(51, 51, 51);
 }
@@ -251,23 +301,28 @@ footer .footer__links ul li a:active {
 .policy {
   margin: 0 auto;
 }
+
 .policy ul {
   display: flex;
   gap: 1rem;
 }
+
 .policy ul li {
   list-style: none;
 }
+
 .policy ul li a:link,
 .policy ul li a:visited {
   color: rgb(51, 51, 51);
   font-size: 1.1rem;
   text-decoration: none;
 }
+
 .policy ul li a:hover,
 .policy ul li a:active {
   text-decoration: underline;
 }
+
 .policy ul li span {
   margin-left: 1.5rem;
   color: grey;
