--- a/phase_One/old apple/old apple/CSS/style.css
+++ b/phase_One/old apple/old apple/CSS/style.css
@@ -77,6 +77,7 @@ nav ul li a img:hover {
   margin-top: 2rem;
   text-align: center;
   font-size: 2rem;
+  background-color: var(--bg-light-grey);
 }
 
 .mac .mac__text p {
@@ -110,7 +111,8 @@ nav ul li a img:hover {
 
 .link a:hover,
 .link a:active {
-  color: var(--bg-dark);
+  /* color: var(--bg-dark); */
+  text-decoration: underline;
 }
 
 .bg__img {
@@ -121,7 +123,8 @@ nav ul li a img:hover {
 }
 
 /* Iphone Section */
-.iphone {}
+.iphone {
+}
 
 .iphone__dark {
   background-image: url("../images/home/iphone11-pro-bg.jpg");
@@ -143,7 +146,7 @@ nav ul li a img:hover {
 }
 
 .text h3 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 400;
   padding: 1rem 0;
 }
@@ -180,16 +183,13 @@ a i {
   font-size: 1.8rem;
   color: var(--color-blue);
 }
-
 /* ---------------- */
 .iphone__light {
   background-image: url("../images/home/iphone11-bg.jpg");
 }
-
 .dark .text {
   color: var(--bg-dark);
 }
-
 /* More products */
 /* Responsive Design */
 .more__products {
@@ -200,16 +200,13 @@ a i {
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
 }
-
 .watch {
   background-image: url("../images/home/watch-series-5.jpg");
   background-color: #fafafa;
 }
-
 .card {
   background-image: url("../images/home/apple-card.jpg");
 }
-
 .tv {
   background-image: url("../images/home/apple-tv-background.jpg");
 }
@@ -217,23 +214,23 @@ a i {
 .tv p i {
   color: rgb(26, 25, 25);
 }
-
 .airpods {
   background-color: black;
 }
-
 .airpods .air__img {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .macbook {
+  margin-top: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
+.maci {
+  background-color: var(--bg-light-grey);
+}
 .ipad {
   display: flex;
   align-items: center;
@@ -330,4 +327,30 @@ footer .footer__links ul li a:active {
 .policy ul li span {
   margin-left: 1.5rem;
   color: grey;
+}
+.state {
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 600px) {
+  .mac__image img {
+    width: 100%;
+  }
+  .more__products {
+    /* max-width: 130rem; */
+    margin: 2rem auto;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+  .copyright {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  footer .footer__links {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 2rem;
+  }
 }
