--- a/phase_One/old apple/old apple/CSS/style.css
+++ b/phase_One/old apple/old apple/CSS/style.css
@@ -29,6 +29,9 @@ nav {
   font-size: 1.6rem;
   background-color: var(--bg-dark);
   height: 4.4rem;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  opacity: 0.9;
 }
 
 nav ul {
