--- a/phase_One/Group apple project/css/style.css
+++ b/phase_One/Group apple project/css/style.css
@@ -91,8 +91,7 @@ nav ul li a img:hover {
 }
 .menu:hover {
   opacity: 1;
-} */
-/* .menu-top,
+.menu-top,
 .menu-botton {
   position: absolute;
   top: 30%;
