--- a/phase_One/current apple/css/style.css
+++ b/phase_One/current apple/css/style.css
@@ -136,9 +136,9 @@ nav ul li a img:hover {
   height: 75rem;
 }
 .link {
-  font-size: 2rem;
+  font-size: 1.6rem;
   display: flex;
-  gap: 2.5rem;
+  gap: 2rem;
 }
 
 .link a:link,
@@ -146,6 +146,7 @@ nav ul li a img:hover {
   color: var(--color-blue);
   text-decoration: none;
   transition: all 0.3s;
+  font-weight: 500;
 }
 
 .link a:hover,
@@ -181,7 +182,7 @@ nav ul li a img:hover {
 
 /* reusable class */
 .text h2 {
-  font-size: 5rem;
+  font-size: 4.4rem;
   font-weight: 500;
 }
 
@@ -206,6 +207,53 @@ a i {
   width: 100%;
   height: 71rem;
   object-fit: cover;
+}
+.mac {
+  background-image: url("../images/hero_macbookair__el7scava26mq_large.png");
+  background-position: center;
+  background-size: initial;
+  height: 70rem;
+  position: relative;
+}
+.mac-info {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  transform: translateY(-50%);
+}
+.mac-text h2 {
+  font-size: 4.4rem;
+}
+.mac-link {
+  padding: 0.7rem;
+  font-size: 1.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+.mac-link a:link,
+.mac-link a:visited {
+  text-decoration: none;
+  font-weight: 500;
+}
+.mac-link a:hover,
+.mac-link a:active {
+  text-decoration: underline;
+}
+.row {
+  display: flex;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+.iphone__dark {
+  flex: 1 1 0;
+}
+.macbook-pro {
+  flex: 1 1 0;
+  background-image: url("../images/promo_mbp13__buwssod6c8vm_large.jpg");
+  background-position: center;
 }
 
 .flex {
