--- a/phase_One/Group apple project/css/style.css
+++ b/phase_One/Group apple project/css/style.css
@@ -27,11 +27,10 @@ nav {
   position: sticky;
   top: 0;
   font-size: 1.6rem;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.8);
   height: 4.4rem;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  opacity: 0.97;
 }
 
 nav ul {
@@ -247,7 +246,11 @@ a i {
   background-image: url("../images/home/watch-series-5.jpg");
   background-color: #fafafa;
   flex: 1 1 0px;
+
   /* width: 77.15rem; */
+  .tv p::after {
+    content: "|";
+  }
 }
 
 /* Card Section */
