--- a/phase_One/puppy project media query/puppy responsive-sami/css/style.css
+++ b/phase_One/puppy project media query/puppy responsive-sami/css/style.css
@@ -3,23 +3,20 @@
   margin: 0;
   font-family: sans-serif;
 }
-
+/* for Mobile and Devices Screen less than 768px */
 header,
 footer {
   color: #fff;
-  background-color: blue;
+  background-color: #074584;
   text-align: center;
   padding: 10px;
 }
-
 footer {
   padding: 30px 0;
 }
-
 .hero img {
   width: 100%;
 }
-
 main {
   max-width: 980px;
   margin: 0 auto;
@@ -27,52 +24,46 @@ main {
   text-align: center;
   font-size: 25px;
 }
-
 main section {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin: 20px auto;
 }
-
 main section div {
   flex: 1 1 0;
 }
-
 main section div img {
-  width: 310px;
+  width: 100%;
 }
-
 .missing {
   display: none;
 }
-
+/* for Desktop and Laptop, (768px - Larger ) */
 @media screen and (min-width: 768px) {
   main section {
     flex-direction: row;
   }
-
   main section:last-child {
     gap: 50px;
   }
-
   .missing {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block;
+    position: relative;
     background-color: pink;
     margin-bottom: 5px;
   }
-
   .missing div {
-    padding: 0 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
-
   .missing p {
     text-align: center;
-    font-size: 60px;
+    width: 150px;
+    font-size: 40px;
   }
-
   main section div img {
     width: 100%;
   }
