--- a/phase_One/Apple Bootstrap_Group_version 1.0/css/style.css
+++ b/phase_One/Apple Bootstrap_Group_version 1.0/css/style.css
@@ -1,238 +1,236 @@
 /* General Styling*/
 body {
-    font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 a {
-    color: #06c;
+  color: #06c;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .white {
-    color: #fff;
+  color: #fff;
 }
 
 .black {
-    color: #1d1d1f;
+  color: #1d1d1f;
 }
 
 .grey {
-    color: #86868b;
+  color: #86868b;
 }
 
 .top-50 {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 /* little code adede here */
 .nav-wrapper {
-    background: rgba(0, 0, 0, 0.8);
-    /* this line for blury */
-    backdrop-filter: blur(10px);
-    font-size: 0.85em;
-    font-weight: 200;
+  background: rgba(0, 0, 0, 0.8);
+  /* this line for blury */
+  backdrop-filter: blur(10px);
+  font-size: 0.85em;
+  font-weight: 200;
 }
 
 .nav-wrapper ul li a {
-    color: #fff;
+  color: #fff;
 }
 
 .navbar-toggler {
-    color: #fff;
+  color: #fff;
 }
 
 .nav-item {
-    text-align: left !important;
-    padding: 4px 0;
-    border-bottom: 1px solid #4b4b4b;
+  text-align: left !important;
+  padding: 4px 0;
+  border-bottom: 1px solid #4b4b4b;
 }
 
-/* our CSS Starts here */
+/* My CSS Starts here */
 .apple-items {
-    height: 580px;
-    background-position: center;
-    background-repeat: no-repeat;
+  height: 580px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .nothover:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .iphone-pro {
-    background-image: url(../images/home/iphone11-pro-bg.jpg);
+  background-image: url(../images/home/iphone11-pro-bg.jpg);
 }
 
 .iphone-11 {
-    background-image: url(../images/home/iphone11-colored.jpg);
+  background-image: url(../images/home/iphone11-colored.jpg);
 }
 
 .apple-card {
-    background-image: url(../images/home/apple-card.jpg);
+  background-image: url(../images/home/apple-card.jpg);
 }
 
 .watch {
-    background-image: url(../images/home/watch.jpg);
+  background-image: url(../images/home/watch.jpg);
 }
 
 .tv {
-    background-image: url(../images/home/apple-tv-background.jpg);
+  background-image: url(../images/home/apple-tv-background.jpg);
 }
 
 .airpod {
-    background-image: url(../images/home/air-pods.jpg);
-    background-color: black;
-    background-position: bottom;
+  background-image: url(../images/home/air-pods.jpg);
+  background-color: black;
+  background-position: bottom;
 }
 
 .macbook {
-    background-image: url(../images/home/macbook-pro.jpg);
-    background-position: bottom;
+  background-image: url(../images/home/macbook-pro.jpg);
+  background-position: bottom;
 }
 
 .ipad {
-    background-image: url(../images/home/new-ipad.jpg);
-    background-size: contain;
+  background-image: url(../images/home/new-ipad.jpg);
+  background-size: cover;
 }
 
-/* Our CSS ends  */
+/* My CSS ends  */
 
 /* Footer Styling */
 .footer-wrapper {
-    background-color: #f5f5f7;
-    color: #86868b;
-    font-size: 0.7em;
+  background-color: #f5f5f7;
+  color: #86868b;
+  font-size: 0.7em;
 }
 
 .footer-wrapper ul {
-    list-style: none;
-    padding-bottom: 10px;
-    padding-inline-start: 0px;
+  list-style: none;
+  padding-bottom: 10px;
+  padding-inline-start: 0px;
 }
 
 .footer-wrapper ul a {
-    color: #515154;
+  color: #515154;
 }
 
 .my-apple-wrapper {
-    padding-bottom: 15px;
-    margin-top: 10px;
+  padding-bottom: 15px;
+  margin-top: 10px;
 }
 
 .copyright {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 .footer-country {
-    margin-top: 8px;
+  margin-top: 8px;
 }
 
 .flag-wrapper {
-    display: inline-block;
-    vertical-align: middle;
-    padding-right: 5px;
+  display: inline-block;
+  vertical-align: middle;
+  padding-right: 5px;
 }
 
 .footer-country-name {
-    display: inline-block;
-    vertical-align: middle;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .footer-links-terms ul {
-    display: flex;
+  display: flex;
 }
 
 .footer-links-terms ul li {
-    padding: 0 10px;
-    border-right: 1px solid #d2d2d7;
+  padding: 0 10px;
+  border-right: 1px solid #d2d2d7;
 }
 
 .footer-links-terms ul li:first-child {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 .footer-links-terms ul li:last-child {
-    border-right: 0;
+  border-right: 0;
 }
 
 .footer-links-wrapper h3 {
-    font-size: 12px;
-    font-weight: 600;
-    color: #1d1d1f;
+  font-size: 12px;
+  font-weight: 600;
+  color: #1d1d1f;
 }
 
 .footer-wrapper ul li {
-    padding: 4px 0;
+  padding: 4px 0;
 }
 
 .upper-text-container {
-    border-bottom: 1px solid #d2d2d7;
-    padding: 17px 0 10px;
-    margin-bottom: 20px;
+  border-bottom: 1px solid #d2d2d7;
+  padding: 17px 0 10px;
+  margin-bottom: 20px;
 }
 
 .upper-text-container a {
-    color: #515154;
+  color: #515154;
 }
 
 /*Media Query*/
 /* Footer */
 @media (max-width: 768px) {
-    .footer-links-wrapper ul {
-        display: none;
-    }
+  .footer-links-wrapper ul {
+    display: none;
+  }
 
-    .footer-links-wrapper h3 {
-        padding: 10px 0;
-        border-bottom: 1px solid #ccc;
-    }
+  .footer-links-wrapper h3 {
+    padding: 10px 0;
+    border-bottom: 1px solid #ccc;
+  }
 
-    .footer-links-wrapper h3:after {
-        font-family: "FontAwesome";
-        content: "\f067";
-        padding-left: 10px;
-        position: absolute;
-        right: 25px;
-    }
+  .footer-links-wrapper h3:after {
+    font-family: "FontAwesome";
+    content: "\f067";
+    padding-left: 10px;
+    position: absolute;
+    right: 25px;
+  }
 }
 
 @media (min-width: 768px) {
+  /*Nav bar*/
+  .nav-item {
+    text-align: center !important;
+    padding: 0;
+    border-bottom: 0px;
+  }
 
-    /*Nav bar*/
-    .nav-item {
-        text-align: center !important;
-        padding: 0;
-        border-bottom: 0px;
-    }
-
-    /*Footer styling*/
-    .my-apple-wrapper {
-        border-bottom: 1px solid #d2d2d7;
-    }
+  /*Footer styling*/
+  .my-apple-wrapper {
+    border-bottom: 1px solid #d2d2d7;
+  }
 }
 
 @media (min-width: 992px) {
+  /*Footer styling*/
+  .copyright {
+    margin-top: 10px;
+  }
 
-    /*Footer styling*/
-    .copyright {
-        margin-top: 10px;
-    }
+  .footer-country {
+    margin-top: 10px;
+  }
 
-    .footer-country {
-        margin-top: 10px;
-    }
-
-    .footer-links-terms {
-        margin-top: 10px;
-    }
+  .footer-links-terms {
+    margin-top: 10px;
+  }
 }
