--- a/phase_One/PuppyResponsive/Projects/css/style.css
+++ b/phase_One/PuppyResponsive/Projects/css/style.css
@@ -20,17 +20,19 @@ footer {
 }
 .center {
   display: none;
+  font-size: 25px;
 }
 .first__row,
 .second__row {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 0 20px;
   gap: 20px;
   margin: 20px 0;
 }
-.second__row img {
-  width: 310px;
+.second__row img,
+.first__row img {
+  width: 100%;
 }
 section:nth-child(2) {
   text-align: center;
@@ -38,12 +40,27 @@ section:nth-child(2) {
 /* for Tablet and Ipads */
 /* from 700px-1000px */
 @media screen and (min-width: 700px) {
-  .first__row {
+  .first__row,
+  .second__row {
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
   }
-  .second__row img {
-    width: 100%;
+  .first__row div {
+    width: 32%;
+  }
+  .second__row div {
+    width: 46%;
+  }
+  .center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: pink;
+    margin-bottom: 4px;
+    text-align: center;
+  }
+  .center div {
+    width: 150px;
   }
 }
 /* for Computers/Laptops and large Screens */
@@ -52,25 +69,5 @@ section:nth-child(2) {
   main {
     width: 980px;
     margin: 0 auto;
-  }
-  .center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 310px;
-    height: 310px;
-    margin-bottom: 5px;
-    background-color: pink;
-  }
-  .center div {
-    width: 150px;
-  }
-  .center div p {
-    text-align: center;
-    font-size: 30px;
-  }
-  .second__row {
-    flex-direction: row;
-    justify-content: space-between;
   }
 }
