--- a/Phase_Three/MySqlPractice/public/style.css
+++ b/Phase_Three/MySqlPractice/public/style.css
@@ -21,6 +21,7 @@ body {
     font-size: 36px;
     font-weight: 600;
     margin-top: 30px;
+    text-align: center;
 }
 
 .subtitle {
@@ -29,6 +30,7 @@ body {
     font-size: 16px;
     font-weight: 600;
     margin-top: 10px;
+    text-align: center;
 }
 
 .input-container {
